@@ -1,3 +1,12 @@
+2014-03-09  Albert Graef  <aggraef@gmail.com>
+
+	* runtime.cc/hh: Add some helper functions to serialize accesses
+	to the runtime, to be used if the runtime needs to be called from
+	mutithreaded C/C++ code. This essentially implements a global
+	interpreter lock (GIL) which isn't nice, but can't really be
+	avoided in some situations until the Pure runtime becomes fully
+	thread-safe.
+
 2014-03-02  Albert Graef  <aggraef@gmail.com>
 
 	* interpreter.cc/hh, runtime.cc: Keep track of global interpreter
